# runtime-aibom-emitter

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  go.mod  pyproject.toml  requirements.txt
app/: server.py
cli/: main.py
cmd/aibom/: main.go
pkg/: __init__.py
pkg/api/: routes.py
pkg/bom/: bom.go  bom_test.go
pkg/collector/: __init__.py  collector.go  collector_test.go  observer.py
pkg/emitter/: __init__.py  publisher.py
pkg/models/: __init__.py  emission.py
tests/: conftest.py  test_api.py  test_models.py  test_observer.py  test_publisher.py
